[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/lobby.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/icons/face_body.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/icons/face_face.png" type="Texture" id=4]

[node name="lobby" type="Control"]
margin_left = 380.0
margin_top = 70.0
margin_right = 650.0
margin_bottom = 550.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="players" type="Panel" parent="."]
margin_right = 270.0
margin_bottom = 479.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="label" type="Label" parent="players"]
margin_left = 26.0
margin_top = 18.0
margin_right = 142.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."

[node name="start" type="Button" parent="players"]
margin_left = 146.0
margin_top = 427.0
margin_right = 246.0
margin_bottom = 456.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "START!"

[node name="cancel" type="Button" parent="players"]
margin_left = 25.0
margin_top = 427.0
margin_right = 125.0
margin_bottom = 456.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Cancel"

[node name="list" type="ItemList" parent="players"]
margin_left = 25.0
margin_top = 36.0
margin_right = 245.0
margin_bottom = 416.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 1 )

[node name="connect" type="Panel" parent="."]
margin_left = 0.101959
margin_top = -0.239674
margin_right = 270.102
margin_bottom = 479.76
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="body" type="Sprite" parent="connect"]
modulate = Color( 1, 1, 0, 1 )
position = Vector2( 135, 80 )
texture = ExtResource( 3 )

[node name="outline" type="Sprite" parent="connect"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 135, 80 )
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 256, 256 )

[node name="name_label" type="Label" parent="connect"]
margin_left = 14.0
margin_top = 169.0
margin_right = 56.0
margin_bottom = 183.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name:"

[node name="body_color_label" type="Label" parent="connect"]
margin_left = 14.0
margin_top = 220.0
margin_right = 87.0
margin_bottom = 234.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Body Color:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="body_color" type="OptionButton" parent="connect"]
margin_left = 22.0
margin_top = 243.0
margin_right = 248.0
margin_bottom = 263.0

[node name="outline_color_label" type="Label" parent="connect"]
margin_left = 14.0
margin_top = 275.0
margin_right = 103.0
margin_bottom = 289.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Outline Color:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="outline_color" type="OptionButton" parent="connect"]
margin_left = 22.0
margin_top = 298.0
margin_right = 248.0
margin_bottom = 318.0

[node name="name" type="LineEdit" parent="connect"]
margin_left = 17.0
margin_top = 188.0
margin_right = 173.0
margin_bottom = 212.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Smiley"
caret_blink = true
caret_blink_speed = 0.5

[node name="ip_label" type="Label" parent="connect"]
margin_left = 14.0
margin_top = 331.0
margin_right = 56.0
margin_bottom = 345.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "IP:"

[node name="ip" type="LineEdit" parent="connect"]
margin_left = 17.0
margin_top = 350.0
margin_right = 173.0
margin_bottom = 374.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"
caret_blink = true
caret_blink_speed = 0.5

[node name="port_label" type="Label" parent="connect"]
margin_left = 15.0
margin_top = 386.0
margin_right = 54.0
margin_bottom = 400.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Port:"

[node name="port" type="SpinBox" parent="connect"]
margin_left = 17.0
margin_top = 405.0
margin_right = 173.0
margin_bottom = 429.0
size_flags_horizontal = 2
size_flags_vertical = 2
min_value = 1024.0
max_value = 65536.0
value = 27016.0

[node name="host" type="Button" parent="connect"]
margin_left = 181.0
margin_top = 189.0
margin_right = 246.0
margin_bottom = 209.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"

[node name="join" type="Button" parent="connect"]
margin_left = 181.0
margin_top = 351.226
margin_right = 246.0
margin_bottom = 371.226
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"

[node name="error_label" type="Label" parent="connect"]
margin_left = 16.0
margin_top = 417.0
margin_right = 261.0
margin_bottom = 431.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1

[node name="Hide" type="Button" parent="connect"]
margin_left = 108.146
margin_top = 442.287
margin_right = 167.146
margin_bottom = 462.287
text = "Hide"

[node name="Label" type="Label" parent="connect"]
margin_left = 17.0
margin_top = 143.0
margin_right = 262.0
margin_bottom = 165.0
text = "H.A.N.D. BALL"
align = 1
valign = 1

[node name="error" type="AcceptDialog" parent="."]
margin_left = -379.675
margin_top = -45.6926
margin_right = -288.675
margin_bottom = 12.3074
size_flags_horizontal = 2
size_flags_vertical = 2

[connection signal="pressed" from="players/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="players/cancel" to="." method="_on_cancel_pressed"]
[connection signal="item_selected" from="connect/body_color" to="." method="_on_body_color_item_selected"]
[connection signal="item_selected" from="connect/outline_color" to="." method="_on_outline_color_item_selected"]
[connection signal="pressed" from="connect/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="connect/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="connect/Hide" to="." method="_on_hide_pressed"]
